# mcp-video

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DESIGN_STANDARDS.md  Dockerfile  GOVERNANCE.md  INTEGRATION-ROADMAP.md  LEGAL_REVIEW.md  MAINTAINERS.md  MCP-VIDEO-FEATURES-ROADMAP.md  README.md  RELEASE_NOTES_v0.5.0.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TESTING.md  explainer_real_v2.py  explainer_v1_script.py  generate_real_demos.py  index.html  llms.txt  mcp_video.py  pyproject.toml  robots.txt  server.json  sitemap.xml
.forgejo/workflows/: ci.yml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: check-built-artifacts.py  check-forbidden-artifacts.py
.github/workflows/: agent-law.yml  ci.yml  integration-smoke.yml  mirror-smoke.yml  pages.yml  pr-safety.yml  publish.yml
.stitch/: site-tokens.md
agentcut/: __init__.py  __main__.py  client.py  engine.py  errors.py  models.py  server.py
compat/mcp-video-shim/: README.md  pyproject.toml
demo/: demo_script.py
docs/: AI_AGENT_DISCOVERY.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_AUDIT_2.md  C2PA_PROVENANCE.md  CLI_REFERENCE.md  COMPREHENSIVE_TEST_RESULTS.md  CURRENT_EDGE_CASE_AUDIT_2026-04-21.md  DESIGN_STANDARDS.md  DIRECTORY_REBRAND_STATUS.md  ENTERPRISE.md  INTEGRATION-ROADMAP.md  KINOCUT-AUDIO-FEATURES.md  KINOCUT-FEATURES-ROADMAP.md  LEGAL_REVIEW.md  MCP-VIDEO-AUDIO-FEATURES.md  MCP-VIDEO-FEATURES-ROADMAP.md  MCPB.md  MCPB_SUPPLY_CHAIN.md  POST_RESCUE_FEATURES.md  PYTHON_CLIENT.md  README.md  RELEASE_1.8_CHECKLIST.md  RELEASE_HARDENING_HANDOFF_2026-05-09.md  RELEASE_RITUAL.md  REPURPOSE_SKILL.md  RESCUE.md  SKOOL_POST.md  STREAM_TO_SHORTS.md  TESTING.md  TOOLS.md  VIDEO_RECEIPT.md  WORKFLOWS.md  faq.md  git-branch-governance.md  launch-checklist.md  public_claims.json  repository-audit-checklist.md
docs/adr/: 0001-thin-facade-pattern.md  0002-ffmpeg-helpers-single-source-of-truth.md  0003-engine-tool-separation.md  0004-mixin-based-guardrails.md  0005-basicsr-python-314-exclusion.md  0006-basic-pitch-python-313-and-extra-conflicts.md  0007-agent-workflow-engine.md  0008-editing-kernel.md
docs/evidence/: 2026-07-14-sound-s14-dual-class-benchmark.json
docs/internal/: GITHUB_GUARDIAN_AUDIT.md  HYPERFRAMES_INTEGRATION_RESEARCH.md  IMPROVEMENTS_SUMMARY.md
docs/plans/: 2026-03-22-wave5-verification-design.md  (+7 more)
examples/: README.md  agent_cookbook.py  claude_mcp_config.json  pip_install_config.json  repurpose_current_tools_demo.py
explainer-video/: VIDEO_AUDIT_RECOMMENDATIONS.md  concat.txt  generate_explainer_demos.py  generate_real_demos.py  package-lock.json  package.json
kinocut/: __init__.py  __main__.py  audio_bed_validation.py  c2pa.py  capability_report.py  creation_engine.py  defaults.py  doctor.py  engine.py  engine_audio_bed.py  engine_audio_bed_filters.py  engine_audio_normalize.py  engine_audio_ops.py  engine_body_swap.py  engine_composite_layers.py  engine_composite_layers_blend.py  engine_composite_layers_rotate.py  engine_crop.py  engine_export.py  engine_glitch_shader.py  engine_preview.py  engine_reverse.py  engine_runtime_utils.py  engine_subtitles.py  engine_transcode.py  errors.py  ffmpeg_helpers.py  hyperframes_engine.py  limits.py  models.py  next_action.py  paths.py  postrescue.py  quality_guardrails.py  server.py  server_app.py  server_tools_advanced.py  server_tools_audio.py  server_tools_basic.py  server_tools_hyperframes.py  (+8 more)
kinocut/client/: ai.py  (+12 more)
kinocut_sound/: __init__.py  _assembly_integrity.py  _model_boundary.py  _script_integrity.py  _script_resource_limits.py  authorization.py  authorization_privacy.py  episode_assembly.py  limits.py  provider_policy.py  script_parser.py
manual/: comprehensive_media_audit.py  real_video_manual.py
mcp_video/: __init__.py  __main__.py  ai_engine.py  analytics.py  audio_engine.py  client.py  defaults.py  design_quality.py  doctor.py  effects_engine.py  engine.py  engine_advanced_mask.py  engine_audio_normalize.py  engine_audio_ops.py  engine_audio_waveform.py  engine_batch.py  engine_chroma_key.py  engine_compare_quality.py  engine_composite_layers.py  engine_composite_layers_blend.py  engine_composite_layers_rotate.py  engine_composite_layers_source.py  engine_convert.py  engine_crop.py  engine_detect_scenes.py  engine_edit.py  engine_export.py  engine_extract_audio.py  engine_fade.py  engine_filters.py  engine_frames.py  engine_glitch_shader.py  engine_hls.py  engine_images.py  engine_mask.py  engine_merge.py  engine_metadata.py  engine_overlay.py  engine_preview.py  engine_probe.py  (+46 more)
mcpb/: README.md  manifest.json
npm/: package.json
scripts/: apply_public_release_cutover.py  audit_scores.py  build-mcpb.py  git-professional-audit.sh  git-workspace-cleanup.sh  github-pr-monitor.py  repo-readiness-audit.py
tests/: conftest.py  registry_fixtures.py  rescue_fixtures.py  test_add_audio_duration_policy.py  test_add_audio_surfaces.py  test_adversarial_audit.py  test_agent_output.py  test_ai_features.py  test_aivideo_ingest.py  test_aivideo_preflight.py  test_aivideo_protection.py  test_aivideo_salvage.py  test_architecture_guardrails.py  test_audio_bed.py  test_audio_bed_surfaces.py  test_audio_fades.py  test_audio_loudnorm.py  test_audio_presets.py  test_audio_sequencing.py  test_body_swap.py  test_c2pa_provenance.py  test_capability_report.py  test_captions_contracts.py  test_captions_grouping.py  test_captions_placement.py  test_captions_word_timed.py  test_cli.py  test_cli_common.py  test_cli_formatting.py  test_cli_handlers.py  test_cli_parsers.py  test_client.py  test_clip_pipeline.py  test_contracts_acceptance.py  test_contracts_capability.py  test_contracts_common.py  test_contracts_defect.py  test_contracts_review.py  test_contracts_trusted_execution.py  test_cost_ledger.py  (+181 more)
workflows/: CONTEXT.md  GOLDEN_WORKFLOWS.md  README.md
(+474 files in other folders)
