[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-video"
version = "0.4.1"
description = "Video editing MCP server for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["video", "editing", "mcp", "ffmpeg", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
client = ["pillow>=10.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pillow>=10.0", "rich>=13.0"]
all = ["pillow>=10.0", "rich>=13.0"]

[project.scripts]
mcp-video = "mcp_video.__main__:main"

[project.urls]
Homepage = "https://github.com/pastorsimon1798/mcp-video"
Documentation = "https://github.com/pastorsimon1798/mcp-video#readme"
Repository = "https://github.com/pastorsimon1798/mcp-video"

[tool.hatch.build]
exclude = [
    ".venv/",
    ".venv-build/",
    "tests/",
    "dist/",
    "build/",
    "*.egg-info/",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_video"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (real-media integration tests)",
]
