[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-video"
version = "1.2.1"
description = "Video editing MCP server for AI agents. 82 tools, 3 interfaces, rich CLI. Local, fast, free."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["video", "editing", "mcp", "ffmpeg", "remotion", "ai", "agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
client = ["pillow>=10.0"]
image = ["pillow>=10.0", "scikit-learn>=1.3", "webcolors>=1.13"]
image-ai = ["pillow>=10.0", "scikit-learn>=1.3", "webcolors>=1.13", "anthropic>=0.30"]
remotion = []  # External: Node.js + Remotion CLI (npx remotion)
ai = [
    "openai-whisper>=20231117",
    "demucs>=4.0",
    "realesrgan>=0.3",
    "basicsr>=1.4",
    "numpy>=1.26",
    "opencv-contrib-python>=4.10",
    "torch>=2.0",
    "torchaudio>=2.0",
    "imagehash>=4.3",
    "Pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pillow>=10.0",
    "rich>=13.0",
    "scikit-learn>=1.3",
    "webcolors>=1.13",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "S", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "S603", "S607", "S311", "S310", "S112", "S110"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S108", "B017"]

[project.scripts]
mcp-video = "mcp_video.__main__:main"

[project.urls]
Homepage = "https://github.com/pastorsimon1798/mcp-video"
Documentation = "https://github.com/pastorsimon1798/mcp-video#readme"
Repository = "https://github.com/pastorsimon1798/mcp-video"

[tool.hatch.build]
exclude = [
    ".venv/",
    ".venv-build/",
    ".playwright-mcp/",
    ".stitch/",
    "tests/",
    "manual/",
    "out/",
    "explainer-video/",
    "dist/",
    "build/",
    "test_comprehensive.py",
    "test_real_video.py",
    "*.egg-info/",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_video"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (real-media integration tests)",
    "remotion: marks tests requiring Node.js + Remotion CLI",
]
